--- a/src/popup.html
+++ b/src/popup.html
@@ -45,7 +45,7 @@
             </div>
         </div>
     </div>
-    <p>Auto save...</p>
+    <p>Auto save in local env...</p>
     <script src="js/load.js"></script>
     <script src="js/save.js"></script>
 </body>
