[v1.1] zoom in & out

--- a/src/popup.html
+++ b/src/popup.html
@@ -45,8 +45,13 @@
             </div>
         </div>
     </div>
-    <p>Auto save in local env...</p>
+    <div class="footer">
+        <p class="msg">Auto save in local env...</p>
+        <p id="zoom-out" class="dli-zoom-out"><span></span></p>
+        <p id="zoom-in" class="dli-zoom-in"><span></span></p>
+    </div>
     <script src="js/load.js"></script>
     <script src="js/save.js"></script>
+    <script src="js/zoom.js"></script>
 </body>
 </html>
