[v1.2] text file download button

--- a/src/popup.html
+++ b/src/popup.html
@@ -47,11 +47,13 @@
     </div>
     <div class="footer">
         <p class="msg">Auto save in local env...</p>
+        <a class="gg-software-download" href="#" id="download" download="SimpleMemoPad.txt"></a>
         <p id="zoom-out" class="dli-zoom-out"><span></span></p>
         <p id="zoom-in" class="dli-zoom-in"><span></span></p>
     </div>
     <script src="js/load.js"></script>
     <script src="js/save.js"></script>
     <script src="js/zoom.js"></script>
+    <script src="js/download.js"></script>
 </body>
 </html>
