--- a/src/popup.html
+++ b/src/popup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/icon.css">
     <link rel="stylesheet" href="css/tab.css">
 </head>
 <body>
