--- a/src/popup.html
+++ b/src/popup.html
@@ -48,6 +48,23 @@
     </div>
     <div class="footer">
         <p class="msg">Auto save in local env...</p>
+        <br />
+        <label class="font-size">フォントサイズ:
+          <select id="font-size">
+            <option value="0.5">0.5em</option>
+            <option value="1" selected>1em</option>
+            <option value="1.25">1.25em</option>
+            <option value="1.5">1.5em</option>
+            <option value="1.75">1.75em</option>
+            <option value="2">2em</option>
+            <option value="2.5">2.5em</option>
+            <option value="3">3em</option>
+            <option value="3.5">3.5em</option>
+            <option value="4">4em</option>
+            <option value="4.5">4.5em</option>
+            <option value="5">5em</option>
+          </select>
+        </label>
         <a class="gg-software-download" href="#" id="download" download="SimpleMemoPad.txt"></a>
         <p id="zoom-out" class="dli-zoom-out"><span></span></p>
         <p id="zoom-in" class="dli-zoom-in"><span></span></p>
