[v1.3.3] mod Shortcut key

--- a/src/popup.html
+++ b/src/popup.html
@@ -65,7 +65,7 @@
         </div>
     </div>
     <div class="footer">
-        <p class="msg">Auto save in local env... / Shortcut key: "Ctrl+Shift+P"</p>
+        <p class="msg">Auto save in local env... / Shortcut key: "Ctrl+Shift+Z"</p>
         <br />
         <a href="#" id="close" class="round_btn"></a>
         <a class="gg-software-download" href="#" id="download" download="SimpleMemoPad.txt"></a>
