--- a/src/popup.html
+++ b/src/popup.html
@@ -43,29 +43,38 @@
         <div class="cp_tabpanels">
             <div id="first_tab01" class="cp_tabpanel show">
                 <textarea cols="50" row="50" id="contents1" class="contents"></textarea>
+                <span id="inputlength1" class="char-right">length: 0</span>
             </div>
             <div id="second_tab01" class="cp_tabpanel">
                 <textarea cols="50" row="50" id="contents2" class="contents"></textarea>
+                <span id="inputlength2" class="char-right">length: 0</span>
             </div>
             <div id="third_tab01" class="cp_tabpanel">
                 <textarea cols="50" row="50" id="contents3" class="contents"></textarea>
+                <span id="inputlength3" class="char-right">length: 0</span>
             </div>
             <div id="force_tab01" class="cp_tabpanel">
                 <textarea cols="50" row="50" id="contents4" class="contents"></textarea>
+                <span id="inputlength4" class="char-right">length: 0</span>
             </div>
             <div id="five_tab01" class="cp_tabpanel">
                 <textarea cols="50" row="50" id="contents5" class="contents"></textarea>
+                <span id="inputlength5" class="char-right">length: 0</span>
             </div>
             <div id="six_tab01" class="cp_tabpanel">
                 <textarea cols="50" row="50" id="contents6" class="contents"></textarea>
+                <span id="inputlength6" class="char-right">length: 0</span>
             </div>
             <div id="seven_tab01" class="cp_tabpanel">
                 <textarea cols="50" row="50" id="contents7" class="contents"></textarea>
+                <span id="inputlength7" class="char-right">length: 0</span>
             </div>
         </div>
     </div>
     <div class="footer">
-        <p class="msg">Auto save in local env. / "Ctrl(Command)+Shift+X"</p>
+        <span class="msg">
+            Auto save in local env... / Shortcut key: "Ctrl+Shift+Z"
+        </span>
         <br />
         <a href="#" id="close" class="round_btn"></a>
         <a class="gg-software-download" href="#" id="download" download="SimpleMemoPad.txt"></a>
